@@ -83,9 +83,11 @@ used to generate the document. You also specify the type of document
 
 <H3>Document Type</H3>
 
-The <VAR>Book</VAR> radio button specifies that the input files are
-structured with headings. The <VAR>Web Page</VAR> radio button specifies
-unstructured files.
+The <VAR>Book</VAR> radio button specifies that the input files
+are structured with headings. The <VAR>Continuous</VAR> radio
+button specifies unstructured files without page breaks between
+each file. The <VAR>Web Page</VAR> radio button specifies
+unstructured files with page breaks between each file.
 
 <H3>Input Files</H3>
 
