@@ -105,9 +105,12 @@ or web page) and the title and logo images.
 
 <H2>Setting the Document Type</H2>
 
-Normally <I>HTMLDOC</I> generates indexed documents
-from your structured HTML files. To convert a single unstructured document
-(or "web page") click on the <I>Web Page</I> radio button.
+Normally <I>HTMLDOC</I> generates indexed documents from your
+structured HTML files. To convert a single unstructured document
+(or "web page") click on the <I>Continuous</I> or <I>Web
+Page</I> radio buttons. The <I>Web Page</I> type inserts page
+breaks between each file or URL, while the <I>Continuous</I>
+type does not.
 
 <P>Structured HTML files use heading elements (<CODE>H1</CODE>,
 <CODE>H2</CODE>, etc.) to delineate chapters and headings within a
